--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "player",
+  "name": "instareadplayer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,24 +13,19 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@types/node": "20.11.6",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cssnano": "^6.0.3",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
+    "drizzle-orm": "^0.29.3",
     "framer-motion": "^11.0.3",
+    "ioredis": "^5.3.2",
     "million": "^2.6.4",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.33",
+    "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3"
   },
@@ -38,11 +33,21 @@
     "@testing-library/jest-dom": "^6.2.1",
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.11",
+    "@types/node": "20.11.6",
+    "@types/pg": "^8.11.0",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "aws-cdk-lib": "2.110.1",
+    "constructs": "10.3.0",
+    "cssnano": "^6.0.3",
+    "drizzle-kit": "^0.20.14",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "8.4.33",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "sst": "^2.39.13",
-    "aws-cdk-lib": "2.110.1",
-    "constructs": "10.3.0"
+    "tailwindcss": "3.4.1"
   }
 }
