--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.3",
     "framer-motion": "^11.0.3",
-    "ioredis": "^5.3.2",
     "million": "^2.6.4",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redis": "^4.6.12",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3"
