--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "redis": "^4.6.12",
+    "redis": "3.1.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3"
