--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-DATABASE_URL=postgresql://prodroot:ViralPondLeaf@192.168.0.101:5432/instaread?schema=public
-CACHE_HOST=audio-processor-nud4ju.serverless.use1.cache.amazonaws.com
-CACHE_PORT=6379 
+DATABASE_URL="postgresql://prodroot:ViralPondLeaf@192.168.0.101:5432/instaread?schema=public"
+CACHE_URL="redis://audio-processor-nud4ju.serverless.use1.cache.amazonaws.com:6379" 
