--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 DATABASE_URL="postgresql://prodroot:ViralPondLeaf@192.168.0.101:5432/instaread?schema=public"
-CACHE_URL="redis://audio-processor-nud4ju.serverless.use1.cache.amazonaws.com:6379" 
+CACHE_URL="redis://192.168.0.101:6379" 
